--- a/App_exemplo_1/src/app/tab3/tab3.page.html
+++ b/App_exemplo_1/src/app/tab3/tab3.page.html
@@ -7,6 +7,9 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <div>
+      <h1>Desenvolvido pelo aluno: Carlos Miguel Lima Silva </h1>
+  </div>
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">About</ion-title>
